kubes/gene-prod-flask-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gene-prod-flask-deployment
  labels:
    username: avlav
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gene-prod-flask
  template:
    metadata:
      labels:
        app: gene-prod-flask
    spec:
      containers:
        - name: flaskdeploys
          imagePullPolicy: Always
          image: avlavelle/gene_api
          ports:
          - name: http
            containerPort: 5000
