kubes/gene-prod-redis-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gene-prod-redis-deployment
  labels:
    username: avlav
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gene-prod-redis
  template:
    metadata:
      labels:
        app: gene-prod-redis
    spec:
      containers:
        - name: deploys
          image: redis:7
          command:  
          volumeMounts:
          - name: gene-prod-redis-pvc
            mountPath: "/data"
      volumes:
      - name: gene-prod-redis-pvc
        persistentVolumeClaim:
          claimName: gene-prod-redis-pvc
