kubes/avlav-test-nodeport.yml
---
kind: Service
apiVersion: v1
metadata:
    name: test-service-nodeport
spec:
    type: NodePort
    selector:
        app: avlav-test-flask
    ports:
        - port: 5000
          targetPort: 5000
