kubes/gene-prod-flask-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gene-prod-flask-service
  labels:
    username: avlav
    env: prod
spec:
  type: ClusterIP
  selector:
    app: gene-prod-flask
  ports:
  - name: gene-prod-flask
    port: 5000
    targetPort: 5000
