kubes/gene-prod-nodeport.yml
---
kind: Service
apiVersion: v1
metadata:
    name: prod-service-nodeport
spec:
    type: NodePort
    selector:
        app: gene-prod-flask
    ports:
        - port: 5000
          targetPort: 5000
