kubes/kjm24-test-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "kjm24.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: flasktest-service-nodeport
              port:
                  number: #unique to nodeport k8 thing
